# Production

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
docs/drawio/: outline.drawio
include/: classifier_pipeline.h  detector_pipeline.h  plugin_pipeline.h  sequence_pipeline.h  time_limit.h  utils.h
src/: classifier_pipeline.cpp  detector_pipeline.cpp  main.cpp  plugin_pipeline.cpp  sequence_pipeline.cpp  utils.cpp
